src/test/ui/issues/issue-10764.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-10764.rs:4:13
   |
LL | fn main() { f(bar) }
   |             ^^---^
   |               |
   |               expected `fn()`, found `extern "C" fn() {bar}`
   |
note: function defined here
  --> $DIR/issue-10764.rs:1:4
   |
LL | fn f(_: extern "Rust" fn()) {}
   |    ^ ---------------------
help: provide an argument of the correct type
   |
LL | fn main() { f({fn()}) }
   |             ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
