src/test/ui/issues/issue-10764.rs
fn f(_: extern "Rust" fn()) {}
extern fn bar() {}

fn main() { f(bar) }
//~^ ERROR arguments to this function are incorrect
